WorkInProgress/Codeforces - Grakn Forces 2020/A. Circle Coloring/attic/stderr
[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:143:14: [0m[0;1;31merror: [0m[1mtoo few arguments provided to function-like macro invocation[0m
    fore(i, n){
[0;1;32m             ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:35:9: [0m[0;1;30mnote: [0mmacro 'fore' defined here[0m
#define fore(i, l, r) for(int i = int(l); i < int(r); ++i)
[0;1;32m        ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:143:5: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'fore'; did you mean 'for'?[0m
    fore(i, n){
[0;1;32m    ^~~~
[0m[0;32m    for
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:143:15: [0m[0;1;31merror: [0m[1mexpected '(' after 'for'[0m
    fore(i, n){
[0;1;32m              ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:157:11: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
    if (a[i] != ans[i-1] && a[i] != ans[0])
[0;1;32m          ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:157:21: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
    if (a[i] != ans[i-1] && a[i] != ans[0])
[0;1;32m                    ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:157:31: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
    if (a[i] != ans[i-1] && a[i] != ans[0])
[0;1;32m                              ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:158:17: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
        aux = a[i];
[0;1;32m                ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:159:16: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
    else if (b[i] != ans[i-1] && b[i] != ans[0])
[0;1;32m               ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:159:26: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
    else if (b[i] != ans[i-1] && b[i] != ans[0])
[0;1;32m                         ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:159:36: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
    else if (b[i] != ans[i-1] && b[i] != ans[0])
[0;1;32m                                   ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:160:17: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
        aux = b[i];
[0;1;32m                ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:162:17: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
        aux = c[i];
[0;1;32m                ^
[0m[1m/Users/lsantel/Competitive-Programming/solutions/Codeforces - Grakn Forces 2020/A. Circle Coloring/sol.cpp:164:14: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'i'[0m
    ans.pb(c[i]);
[0;1;32m             ^
[0m13 errors generated.
